@@ -87,6 +87,7 @@ Version 1.11.0-svn:
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override).
+   * Fixed bug #19503 : "maximum auto saves" setting now works correctly.
 
 
 Version 1.10.0:
