@@ -277,7 +277,8 @@ std::vector<save_info> get_saves_list(const std::string* dir, const std::string*
 
 	if (filter) {
 		filenames.erase(std::remove_if(filenames.begin(), filenames.end(),
-					       filename_filter(*filter)));
+                                               filename_filter(*filter)),
+                                filenames.end());
 	}
 
 	std::vector<save_info> result;
@@ -468,7 +469,7 @@ void remove_old_auto_saves(const int autosavemax, const int infinite_auto_saves)
 	if (countdown == infinite_auto_saves)
 		return;
 
-	std::vector<save_info> games = get_saves_list(&auto_save);
+	std::vector<save_info> games = get_saves_list(NULL, &auto_save);
 	for (std::vector<save_info>::iterator i = games.begin(); i != games.end(); ++i) {
 		if (countdown-- <= 0) {
 			LOG_SAVE << "Deleting savegame '" << i->name() << "'\n";
